--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,12 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html>
+<head>
+    <title>first</title>
+    <link href="./index.css" rel="stylesheet"></link>
+</head>
+    <body>
+        <header class="top"></header>
+        <div class="middle"></div>
+        <div class="bottom"></div>
+    </body>
+</html>
