--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,17 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html>
+    <head>
+    <title>second</title>
+    <link href="./index.css" rel="stylesheet"></link>
+    </head>
+
+    <body>
+        <div class="color color-1"></div>
+        <div class="color color-2"></div>
+        <div class="color color-3">
+                <div class="image">
+            <span class="placeholder">Image Placeholder</span>
+        </div>
+    </div>
+    </body>
+</html>
